--- a/TrackLibrary/TrackLibrary.csproj
+++ b/TrackLibrary/TrackLibrary.csproj
@@ -88,6 +88,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\LibraryDatabase.sql" />
     <Content Include="Assets\Images\backgroundShelf.jpg" />
     <Content Include="Assets\Images\Library-256.png" />
     <Content Include="Assets\Images\notAvailable.jpg" />
@@ -135,7 +136,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
